@@ -1,3 +1,12 @@
+2010-08-18  jjennings  <${AuthorEmail}>
+
+	* LDAPUserUtils.cs: Not for sure where I am going to use this
+	  class yet
+
+	* LDAPUserAttrChange.cs: A static class that will be used to
+	  build the changes in a user object which will be written to
+	  eDirectory
+
 2010-08-16  Jared L Jennings  <jaredljennings@gmail.com>
 
 	* ZFDAppUtils.cs:
